
Package: R.cache
===============

Version: 0.5.0 [2011-08-16]
o Added support for saving and loaded compressed cache files.
o ROBUSTNESS: Now findCache() asserts that any identified cache 
  file is really a file.


Version: 0.4.3 [2011-07-21]
o DOCUMENTATION: Clarified how argument 'dirs' (in methods using it)
  specifies the subdirectory of the cache root directory.


Version: 0.4.2 [2011-05-19]
o Added a help page to clearCache().
o Now argument 'prompt' for clearCache() defaults to TRUE
  iff interactive() is TRUE, otherwise FALSE.


Version: 0.4.1 [2011-04-02]
o Now generateCache() utilizes a generic function getChecksum()
  to obtain the checksum.  This makes it possible to customize
  how checksums are calculated for different classes of objects.
o Added a default getChecksum() which utilizes digest::digest().
o Added getChecksum() for the Object, which first clears the
  cache of the object and the calls the default ditto.
o Added trial version of evalWithMemoization().
o BUG FIX: clearCache() would also report on subdirectories.


Version: 0.4.0 [2011-02-14]
o Added trial versions of memoizedCall() and addMemoization().


Version: 0.3.0 [2010-03-13]
o Added a NAMESPACE.


Version: 0.2.0 [2009-10-16]
o BUG FIX: In R v2.10.0 and newer, we would get an error reporting that
  internal function loadFromConn() does not exists.


Version: 0.1.9 [2009-09-11]
o Added argument 'onError' to loadCache(), to specify the action when 
  an error occurs.  The default used to be to print the error message
  (onError="print"), but now the default is to generate a warning
  ("warning").  The other alternatives are do silently ignore it, or
  to throw the error ("error").  Except for onError="error", loadCache()
  always returns NULL if an error occurs.


Version: 0.1.8 [2009-08-11]
o ROBUSTNESS: Added sanity check to readCacheHeader() testing 
  that the read header identifier is non-empty.  This results
  in a clearer error message that before.